# LEAR

./: .env.template  .gitignore  README.md  mutate_code.py  optimized_program.json  pyproject.toml  simple-food-collection-env.nlogo  test_verifier.py
Experiments/: double-collection-env zero-shot-poison-avoidance-table.csv
docs/: gin_configuration.md
lear/: groq_generator.py  mutate_code.py  prompts.py  simple-food-collection-env.nlogo  verifier.ipynb  verify_netlogo_code.py
lear/dspy/: config.py  prompt.py
lear/dspy_experiment/: config.py  exp1.py  prompt.py  prompt_pseudocode.py  prompt_simple.py
src/: __init__.py  claude_generator.py  code_generator_base.py  config.py  groq_generator.py  langchain_generator.py  logger.py  mutate_code.py  prompts.py  retry_handler.py  simple-food-collection-env.nlogo  text_based_evolution.py  verify_netlogo_code.py
src/analysis/: gecco25_plots.ipynb
src/config/: default.gin  override_gin.py
src/environments/: double-collection-env.nlogo  qd-sampling-env.nlogo  resources.nlogo  simple-collection-env.nlogo  tag.nlogo
src/generators/: base copy.py  base.py  claude.py  groq.py  langchain.py
src/graph_providers/: base.py  unified_provider.py
src/langchain_providers/: __init__.py  base.py  claude_langchain.py  deepseek_langchain.py  groq_langchain.py  openai_langchain.py  unified_provider.py
src/lear/: .simple-food-collection-env.tmp.nlogo  code_generator_base.py  groq_generator.py  mutate_code.py  prompts.py  simple-food-collection-env.nlogo  verify_netlogo_code.py
src/mutation/: mutate_code.py  (+1 more)
src/utils/: retry.py  (+6 more)
(+30 files in other folders)
